fix content alignment in container class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ p {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     gap: 40px 0;
     padding: 40px 0;
 }
